--- a/mainmenu.html
+++ b/mainmenu.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <style>
+            body {
+                background-image: url("submenus/backgrounds/mainBackground.jpg");
+                background-position: center;
+                background-repeat: no-repeat;
+            }
             .button4 {
                 background-color: white;
                 color: black;
@@ -58,15 +63,15 @@
     <body>
         <button
             class="button button4"
-            onclick="window.location.href = 'https://google.com';"
+            onclick="window.location.href = 'submenus/playSubmenu.html;'"
         >
-            <span>start </span>
+            <span>play </span>
         </button><br>
         <button
             class="button button4"
-            onclick="window.location.href = 'https://google.com';"
+            onclick="window.location.href = 'submenus/aiSubmenu.html;'"
         >
-            <span>start </span>
+            <span>AI </span>
         </button>
     </body>
 </html>
