--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
     <body>
         <button
             class="button button4"
-            onclick="window.location.href = 'submenus/playSubmenu.html;'"
+            onclick="window.location.href = 'submenus/playSubmenu.html';"
         >
             <span>play </span>
         </button><br>
         <button
             class="button button4"
-            onclick="window.location.href = 'submenus/aiSubmenu.html;'"
+            onclick="window.location.href = 'submenus/aiSubmenu.html';"
         >
             <span>AI </span>
         </button>
