--- a/submenus/playSubmenu.html
+++ b/submenus/playSubmenu.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
-            body {
-                background-image: url("submenus/backgrounds/mainBackground.jpg");
+            body, html {
+                height: 100%;
+                margin: 0;  
+                background-image: url("backgrounds/playerBackground.jpg");
+                height: 100%; 
                 background-position: center;
                 background-repeat: no-repeat;
+                background-size: cover;
+                z-index: -1;
             }
-            .button {
+            .button1 {
+                position: absolute;
                 background-color: white;
                 color: black;
                 border: 7px solid #e7e7e7;
@@ -24,19 +31,19 @@
                 margin-top: 100px;
             }
 
-            .button:hover {
+            .button1:hover {
                 background-color: #e7e7e7;
                 box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
                     0 17px 50px 0 rgba(0, 0, 0, 0.19);
             }
-            .button span {
+            .button1 span {
                 cursor: pointer;
                 display: inline-block;
                 position: relative;
                 transition: 0.5s;
             }
 
-            .button span:after {
+            .button1 span:after {
                 content: "\00bb";
                 position: absolute;
                 opacity: 0;
@@ -45,15 +52,68 @@
                 transition: 0.5s;
             }
 
-            .button:hover span {
+            .button1:hover span {
                 padding-right: 70px;
             }
 
-            .button:hover span:after {
+            .button1:hover span:after {
                 opacity: 2;
                 right: 0;
             }
-            .button:active {
+            .button1:active {
+                background-color: #a9a9a9;
+                box-shadow: 0 5px #666;
+                transform: translateY(2px);
+            }
+            .button2 {
+                position: absolute;
+                top: 450px;
+                background-color: white;
+                color: black;
+                border: 7px solid #e7e7e7;
+                font-size: 100px;
+                padding: 50px 100px;
+                border-radius: 100px;
+                transition-duration: 0.3s;
+                transition-duration: 0.3s;
+                box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2),
+                    0 6px 20px 0 rgba(0, 0, 0, 0.19);
+                margin-bottom: 100px;
+                margin-left:100px;
+                margin-right:100px;
+                margin-top: 100px;
+            }
+
+            .button2:hover {
+                background-color: #e7e7e7;
+                box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+                    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+            }
+            .button2 span {
+                cursor: pointer;
+                display: inline-block;
+                position: relative;
+                transition: 0.5s;
+            }
+
+            .button2 span:after {
+                content: "\00bb";
+                position: absolute;
+                opacity: 0;
+                top: 0;
+                right: -60px;
+                transition: 0.5s;
+            }
+
+            .button2:hover span {
+                padding-right: 70px;
+            }
+
+            .button2:hover span:after {
+                opacity: 2;
+                right: 0;
+            }
+            .button2:active {
                 background-color: #a9a9a9;
                 box-shadow: 0 5px #666;
                 transform: translateY(2px);
@@ -62,16 +122,16 @@
     </head>
     <body>
         <button
-            class="button"
-            onclick="window.location.href = 'submenus/playSubmenu.html';"
+            class="button1"
+            onclick="window.location.href = 'https://ctyproject.github.io/dinoGames/dinoGameSolo.html';"
         >
-            <span>play </span>
+            <span>Play solo</span>
         </button><br>
         <button
-            class="button"
+            class="button2"
             onclick="window.location.href = 'submenus/aiSubmenu.html';"
         >
-            <span>AI </span>
+            <span>VS AI </span>
         </button>
     </body>
 </html>
