changes on both files

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <style>
-            body {
+            body, html {
                 background-image: url("submenus/backgrounds/mainBackground.jpg");
                 background-position: center;
                 background-repeat: no-repeat;
