lots of changes

--- a/submenus/playSubmenu.html
+++ b/submenus/playSubmenu.html
@@ -14,7 +14,7 @@
             }
             .button1 {
                 position: absolute;
-                background-color: white;
+                background-color: transparent;
                 color: black;
                 border: 7px solid #e7e7e7;
                 font-size: 100px;
@@ -67,7 +67,7 @@
             .button2 {
                 position: absolute;
                 top: 450px;
-                background-color: white;
+                background-color: transparent;
                 color: black;
                 border: 7px solid #e7e7e7;
                 font-size: 100px;
@@ -124,13 +124,13 @@
             class="button1"
             onclick="window.location.href = 'https://ctyproject.github.io/dinoGames/dinoGameSolo.html';"
         >
-            <span>Play solo</span>
+            <span><font color="white">Play Solo</font></span>
         </button><br>
         <button
             class="button2"
             onclick="window.location.href = 'submenus/aiSubmenu.html';"
         >
-            <span>VS AI </span>
+            <span><font color = "white">VS AI</font></span>
         </button>
     </body>
 </html>
