--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                 background-repeat: no-repeat;
             }
             .button {
-                background-color: white;
+                background-color: transparent;
                 color: black;
                 border: 7px solid #e7e7e7;
                 font-size: 100px;
@@ -65,13 +65,13 @@
             class="button"
             onclick="window.location.href = 'submenus/playSubmenu.html';"
         >
-            <span>play </span>
+            <span>Play</span>
         </button><br>
         <button 
         class="button"
             onclick="window.location.href = 'submenus/aiSubmenu.html';"
         >
-            <span>AI </span>
+            <span>AI</span>
         </button>
     </body>
 </html>
