--- a/submenus/playSubmenu.html
+++ b/submenus/playSubmenu.html
@@ -122,15 +122,15 @@
     <body>
         <button
             class="button1"
-            onclick="window.location.href = 'https://ctyproject.github.io/dinoGames/dinoGameSolo.html';"
+            onclick="window.location.href = 'https://coolkid67.github.io/CTY-Term-Project/dinoGames/dinoGameSolo.html';"
         >
             <span>Play solo</span>
         </button><br>
         <button
             class="button2"
-            onclick="window.location.href = 'submenus/aiSubmenu.html';"
+            onclick="window.location.href = 'https://coolkid67.github.io/CTY-Term-Project/dinoGames/dinoGameVersus.html';"
         >
-            <span>VS AI </span>
+            <span>Play versus</span>
         </button>
     </body>
 </html>
