--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
             .button {
                 background-color: transparent;
                 color: black;
+                -webkit-text-stroke-color: white;
+                -webkit-text-stroke-width: 2px;
                 border: 7px solid #e7e7e7;
-                font-size: 100px;
+                font-size: 120px;
                 padding: 50px 100px;
                 border-radius: 100px;
                 transition-duration: 0.3s;
