--- a/submenus/playSubmenu.html
+++ b/submenus/playSubmenu.html
@@ -130,7 +130,7 @@
             class="button2"
             onclick="window.location.href = 'https://coolkid67.github.io/CTY-Term-Project/dinoGames/dinoGameVersus.html';"
         >
-            <span><font color = "white">Play Versus</font></span>
+            <span><font color = "white">VS AI</font></span>
         </button>
     </body>
 </html>
