--- a/submenus/playSubmenu.html
+++ b/submenus/playSubmenu.html
@@ -66,7 +66,7 @@
             }
             .button2 {
                 position: absolute;
-                top: 450px;
+                top: 370px;
                 background-color: transparent;
                 color: black;
                 border: 7px solid #e7e7e7;
@@ -117,6 +117,59 @@
                 box-shadow: 0 5px #666;
                 transform: translateY(2px);
             }
+            .button3 {
+                position: absolute;
+                top: 700px;
+                background-color: transparent;
+                color: black;
+                border: 7px solid #e7e7e7;
+                font-size: 20px;
+                padding: 25px 50px;
+                border-radius: 100px;
+                transition-duration: 0.3s;
+                transition-duration: 0.3s;
+                box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2),
+                    0 6px 20px 0 rgba(0, 0, 0, 0.19);
+                margin-bottom: 100px;
+                margin-left:100px;
+                margin-right:100px;
+                margin-top: 100px;
+            }
+
+            .button3:hover {
+                background-color: #e7e7e7;
+                box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+                    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+            }
+            .button3 span {
+                cursor: pointer;
+                display: inline-block;
+                position: relative;
+                transition: 0.5s;
+            }
+
+            .button3 span:after {
+                content: "\00bb";
+                position: absolute;
+                opacity: 0;
+                top: 0;
+                right: -60px;
+                transition: 0.5s;
+            }
+
+            .button3:hover span {
+                padding-right: 70px;
+            }
+
+            .button3:hover span:after {
+                opacity: 2;
+                right: 0;
+            }
+            .button3:active {
+                background-color: #a9a9a9;
+                box-shadow: 0 5px #666;
+                transform: translateY(2px);
+            }
         </style>
     </head>
     <body>
@@ -131,6 +184,12 @@
             onclick="window.location.href = 'https://coolkid67.github.io/CTY-Term-Project/dinoGames/dinoGameVersus.html';"
         >
             <span><font color = "white">VS AI</font></span>
+        </button>
+        <button
+            class="button3"
+            onclick="window.location.href = 'https://coolkid67.github.io/CTY-Term-Project/index.html';"
+        >
+            <span><font color = "white">Back</font></span>
         </button>
     </body>
 </html>
