--- a/dinoGames/dinoGameSolo.html
+++ b/dinoGames/dinoGameSolo.html
@@ -3,11 +3,17 @@
         <title>
             Dino Game solo
         </title>
+        <style>
+            #github{
+                height: 5%;
+                width:5%;
+            }
+        </style>
     </head>
     <body>
-        <button>
-            <img src="backgrounds\github.png" alt="github raw code" />
-        </button>
+       <a href=""><img id="github" src="backgrounds\github.png" alt="github raw code"/></a>
+            
+        
         <iframe
             height="95%"
             width="100%"
