Moved Github image

--- a/dinoGames/dinoGameSolo.html
+++ b/dinoGames/dinoGameSolo.html
@@ -11,7 +11,7 @@
         </style>
     </head>
     <body>
-       <a href=""><img id="github" src="backgrounds\github.png" alt="github raw code"/></a>
+       <a href=""><img id="github" src="sprites/github.png" alt="github raw code"/></a>
             
         
         <iframe
