--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
             class="button"
             onclick="window.location.href = 'submenus/playSubmenu.html';"
         >
-            <span>Play</span>
+            <span>🚀Launch DINO GAME🚀</span>
         </button><br>
         <button 
         class="button"
-            onclick="window.location.href = 'submenus/aiSubmenu.html';"
+            onclick="window.location.href = 'submenus/infoSubmenu.html';"
         >
-            <span>AI</span>
+            <span>Information</span>
         </button>
     </body>
 </html>
