--- a/submenus/infoSubmenu.html
+++ b/submenus/infoSubmenu.html
@@ -175,19 +175,19 @@
     <body>
         <button
             class="button1"
-            onclick="window.location.href = 'https://ctyproject.github.io/dinoGames/dinoGameSolo.html';"
+            onclick="window.location.href = '';"
         >
-            <span><font color = "white">AI Play</font></span>
+            <span><font color = "white">Explaination</font></span>
         </button><br>
         <button
             class="button2"
             onclick="window.location.href = 'submenus/aiSubmenu.html';"
         >
-            <span><font color = "white">View AI</font></span>
+            <span><font color = "white">Source Code</font></span>
         </button>
         <button
             class="button3"
-            onclick="window.location.href = 'https://coolkid67.github.io/CTY-Term-Project/index.html';"
+            onclick="window.location.href = 'https://github.com/coolkid67/CTY-Term-Project';"
         >
             <span><font color = "white">Back</font></span>
         </button>
