--- a/submenus/infoSubmenu.html
+++ b/submenus/infoSubmenu.html
@@ -187,7 +187,7 @@
         </button>
         <button
             class="button3"
-            onclick="window.location.href = 'https://github.com/coolkid67/CTY-Term-Project';"
+            onclick="window.location.href = 'https://coolkid67.github.io/CTY-Term-Project/';"
         >
             <span><font color = "white">Back</font></span>
         </button>
