--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
             class="button"
             onclick="window.location.href = 'submenus/playSubmenu.html';"
         >
-            <span>🚀Launch DINO GAME🚀</span>
+            <span>Launch</span>
         </button><br>
         <button 
         class="button"
             onclick="window.location.href = 'submenus/infoSubmenu.html';"
         >
-            <span>Information</span>
+            <span>Info</span>
         </button>
     </body>
 </html>
