Connected the pages

--- a/submenus/infoSubmenu.html
+++ b/submenus/infoSubmenu.html
@@ -175,13 +175,13 @@
     <body>
         <button
             class="button1"
-            onclick="window.location.href = '';"
+            onclick="window.location.href = 'https://github.com/coolkid67/CTY-Term-Project/blob/master/README.md';"
         >
             <span><font color = "white">Explaination</font></span>
         </button><br>
         <button
             class="button2"
-            onclick="window.location.href = 'submenus/aiSubmenu.html';"
+            onclick="window.location.href = 'https://github.com/coolkid67/CTY-Term-Project';"
         >
             <span><font color = "white">Source Code</font></span>
         </button>
