--- a/submenus/infoSubmenu.html
+++ b/submenus/infoSubmenu.html
@@ -177,13 +177,13 @@
             class="button1"
             onclick="window.location.href = 'https://github.com/coolkid67/CTY-Term-Project/blob/master/README.md';"
         >
-            <span><font color = "white">Explaination</font></span>
+            <span><font color = "white">Description</font></span>
         </button><br>
         <button
             class="button2"
             onclick="window.location.href = 'https://github.com/coolkid67/CTY-Term-Project';"
         >
-            <span><font color = "white">Source Code</font></span>
+            <span><font color = "white">View Code</font></span>
         </button>
         <button
             class="button3"
