remove legacy files

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <body>
         <button
             class="button"
-            onclick="window.location.href = 'submenus/playSubmenu.html';"
+            onclick="window.location.href = 'dinoGame/dinoGameSource.html';"
         >
             <span>Launch</span>
         </button><br>
