--- a/submenus/infoSubmenu.html
+++ b/submenus/infoSubmenu.html
@@ -6,7 +6,7 @@
             body, html {
                 height: 100%;
                 margin: 0;  
-                background-image: url("backgrounds/aiManuBackground.jpg");
+                background-image: url("backgrounds/infoSubmenuBackground.png");
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: cover;
@@ -183,7 +183,7 @@
             class="button2"
             onclick="window.location.href = 'https://github.com/coolkid67/CTY-Term-Project';"
         >
-            <span><font color = "white">View Code</font></span>
+            <span><font color = "white">View Source</font></span>
         </button>
         <button
             class="button3"
